Optimization CSS + Gulp config

--- a/app/index.html
+++ b/app/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ООО "КомплектСнаб</title>
+    <!--<link rel="preload" as="font" href="fonts/OpenSans-Bold.woff2" crossorigin="anonymous">-->
     <link rel="stylesheet" href="css/app.min.css?ver=0.0.18">
-    <!--<link rel="stylesheet" href="css/critical.css?ver=0.0.17">-->
-    <link rel="icon" href="https://googleman.ru/stas/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="https://googleman.ru/stas/favicon.png" type="image/x-icon">
+    <!--<link rel="stylesheet" href="css/critical.css">-->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
 <body>
 <header class="header" id="header">
@@ -80,31 +81,31 @@
 
                 <ul class="social__list">
                     <li class="social__item">
-                        <a href="https://vk.com/html_css_js_php_postgresql" class="social__link" target="_blank">
+                        <a href="https://vk.com/html_css_js_php_postgresql" class="social__link" target="_blank" rel="noreferrer">
                             <svg class="icon">
                                 <use xlink:href="#icon-vk"/>
                             </svg>
                         </a>
                     <li class="social__item">
-                        <a href="#" class="social__link" target="_blank">
+                        <a href="#" class="social__link" target="_blank" rel="noreferrer">
                             <svg class="icon">
                                 <use xlink:href="#icon-facebook2"/>
                             </svg>
                         </a>
                     <li class="social__item">
-                        <a href="tg://msg?text=@denisdeveloper" class="social__link">
+                        <a href="tg://msg?text=@denisdeveloper" class="social__link" rel="noreferrer">
                             <svg class="icon">
                                 <use xlink:href="#icon-telegram"/>
                             </svg>
                         </a>
                     <li class="social__item">
-                        <a href="#" class="social__link" target="_blank">
+                        <a href="#" class="social__link" target="_blank" rel="noreferrer">
                             <svg class="icon">
                                 <use xlink:href="#icon-twitter"/>
                             </svg>
                         </a>
                     <li class="social__item">
-                        <a href="skype:belocerkovecden" class="social__link" target="_blank">
+                        <a href="skype:belocerkovecden" class="social__link" target="_blank" rel="noreferrer">
                             <svg class="icon">
                                 <use xlink:href="#icon-skype"/>
                             </svg>
@@ -143,7 +144,7 @@
                             <a href="#" class="tabs__contentBtn" download>Скачать</a>
                         </div>
                         <div class="tabs__contentImg">
-                            <img src="img/dest/lamp-2663053.webp" alt="city-mirror" loading="lazy" width="320" height="222.39">
+                            <img src="img/dest/lamp-2663053.webp" alt="city-mirror" loading="lazy" width="320" height="222">
                         </div>
                     </li>
                     <li class="tabs__content-item">
@@ -163,7 +164,7 @@
                             <a href="#" class="tabs__contentBtn" download>Скачать</a>
                         </div>
                         <div class="tabs__contentImg">
-                            <img src="img/dest/light-1246043.webp" loading="lazy" alt="city-mirror" width="320" height="222.39">
+                            <img src="img/dest/light-1246043.webp" loading="lazy" alt="city-mirror" width="320" height="222">
                         </div>
                     </li>
                     <li class="tabs__content-item">
@@ -182,7 +183,7 @@
                             <a href="#" class="tabs__contentBtn" download>Скачать</a>
                         </div>
                         <div class="tabs__contentImg">
-                            <img src="img/dest/light-2156209_1920.webp" loading="lazy" alt="city-mirror" width="320" height="222.39">
+                            <img src="img/dest/light-2156209_1920.webp" loading="lazy" alt="city-mirror" width="320" height="222">
                         </div>
                     </li>
                 </ul>
@@ -435,7 +436,7 @@
                                 odio aspernatur ex, architecto eaque
                                 quo suscipit.</p>
                             <div class="say__user-container">
-                                <div class="wrap__img-user"><img src="img/dest/avatar1.webp" alt="avatar1" loading="lazy"></div>
+                                <div class="wrap__img-user"><img src="img/dest/avatar1.webp" alt="avatar1" loading="lazy" width="70" height="70"></div>
                                 <div class="say__user-container-data">
                                     <div class="say__name-user">Jeremy H.</div>
                                     <div class="say__profession">Manager</div>
@@ -451,7 +452,7 @@
                                 odio aspernatur ex, architecto eaque
                                 quo suscipit.</p>
                             <div class="say__user-container">
-                                <div class="wrap__img-user"><img src="img/dest/avatar2.webp" alt="avatar2" loading="lazy"></div>
+                                <div class="wrap__img-user"><img src="img/dest/avatar2.webp" alt="avatar2" loading="lazy" width="70" height="70"></div>
                                 <div class="say__user-container-data">
                                     <div class="say__name-user">John S.</div>
                                     <div class="say__profession">Freelancer</div>
@@ -467,7 +468,7 @@
                                 odio aspernatur ex, architecto eaque
                                 quo suscipit.</p>
                             <div class="say__user-container">
-                                <div class="wrap__img-user"><img src="img/dest/avatar3.webp" alt="avatar3" loading="lazy"></div>
+                                <div class="wrap__img-user"><img src="img/dest/avatar3.webp" alt="avatar3" loading="lazy" width="70" height="70"></div>
                                 <div class="say__user-container-data">
                                     <div class="say__name-user">Susan W.</div>
                                     <div class="say__profession">Photographer</div>
@@ -483,7 +484,7 @@
                                 odio aspernatur ex, architecto eaque
                                 quo suscipit.</p>
                             <div class="say__user-container">
-                                <div class="wrap__img-user"><img src="img/dest/avatar1.webp" alt="avatar1" loading="lazy"></div>
+                                <div class="wrap__img-user"><img src="img/dest/avatar1.webp" alt="avatar1" loading="lazy" width="70" height="70"></div>
                                 <div class="say__user-container-data">
                                     <div class="say__name-user">Jeremy H.</div>
                                     <div class="say__profession">Manager</div>
@@ -499,7 +500,7 @@
                                 odio aspernatur ex, architecto eaque
                                 quo suscipit.</p>
                             <div class="say__user-container">
-                                <div class="wrap__img-user"><img src="img/dest/avatar2.webp" alt="avatar2" loading="lazy"></div>
+                                <div class="wrap__img-user"><img src="img/dest/avatar2.webp" alt="avatar2" loading="lazy" width="70" height="70"></div>
                                 <div class="say__user-container-data">
                                     <div class="say__name-user">John S.</div>
                                     <div class="say__profession">Freelancer</div>
@@ -515,7 +516,7 @@
                                 odio aspernatur ex, architecto eaque
                                 quo suscipit.</p>
                             <div class="say__user-container">
-                                <div class="wrap__img-user"><img src="img/dest/avatar3.webp" alt="avatar3" loading="lazy"></div>
+                                <div class="wrap__img-user"><img src="img/dest/avatar3.webp" alt="avatar3" loading="lazy" width="70" height="70"></div>
                                 <div class="say__user-container-data">
                                     <div class="say__name-user">Susan W.</div>
                                     <div class="say__profession">Photographer</div>
@@ -531,7 +532,7 @@
                                 odio aspernatur ex, architecto eaque
                                 quo suscipit.</p>
                             <div class="say__user-container">
-                                <div class="wrap__img-user"><img src="img/dest/avatar1.webp" alt="avatar1" loading="lazy"></div>
+                                <div class="wrap__img-user"><img src="img/dest/avatar1.webp" alt="avatar1" loading="lazy" width="70" height="70"></div>
                                 <div class="say__user-container-data">
                                     <div class="say__name-user">Jeremy H.</div>
                                     <div class="say__profession">Manager</div>
@@ -547,7 +548,7 @@
                                 odio aspernatur ex, architecto eaque
                                 quo suscipit.</p>
                             <div class="say__user-container">
-                                <div class="wrap__img-user"><img src="img/dest/avatar2.webp" alt="avatar2" loading="lazy"></div>
+                                <div class="wrap__img-user"><img src="img/dest/avatar2.webp" alt="avatar2" loading="lazy" width="70" height="70"></div>
                                 <div class="say__user-container-data">
                                     <div class="say__name-user">John S.</div>
                                     <div class="say__profession">Freelancer</div>
@@ -563,7 +564,7 @@
                                 odio aspernatur ex, architecto eaque
                                 quo suscipit.</p>
                             <div class="say__user-container">
-                                <div class="wrap__img-user"><img src="img/dest/avatar3.webp" alt="avatar3" loading="lazy"></div>
+                                <div class="wrap__img-user"><img src="img/dest/avatar3.webp" alt="avatar3" loading="lazy" width="70" height="70"></div>
                                 <div class="say__user-container-data">
                                     <div class="say__name-user">Susan W.</div>
                                     <div class="say__profession">Photographer</div>
@@ -667,31 +668,31 @@
             <div class="social">
                 <ul class="social__list">
                     <li class="social__item">
-                        <a href="https://vk.com/html_css_js_php_postgresql" class="social__link" target="_blank">
+                        <a href="https://vk.com/html_css_js_php_postgresql" class="social__link" target="_blank" rel="noreferrer">
                             <svg class="icon">
                                 <use xlink:href="#icon-vk"/>
                             </svg>
                         </a>
                     <li class="social__item">
-                        <a href="#" class="social__link">
+                        <a href="#" class="social__link" rel="noreferrer">
                             <svg class="icon">
                                 <use xlink:href="#icon-facebook2"/>
                             </svg>
                         </a>
                     <li class="social__item">
-                        <a href="tg://msg?text=@denisdeveloper" class="social__link" target="_blank">
+                        <a href="tg://msg?text=@denisdeveloper" class="social__link" target="_blank" rel="noreferrer">
                             <svg class="icon">
                                 <use xlink:href="#icon-telegram"/>
                             </svg>
                         </a>
                     <li class="social__item">
-                        <a href="#" class="social__link" target="_blank">
+                        <a href="#" class="social__link" target="_blank" rel="noreferrer">
                             <svg class="icon">
                                 <use xlink:href="#icon-twitter"/>
                             </svg>
                         </a>
                     <li class="social__item">
-                        <a href="skype:belocerkovecden" class="social__link" target="_blank">
+                        <a href="skype:belocerkovecden" class="social__link" target="_blank" rel="noreferrer">
                             <svg class="icon">
                                 <use xlink:href="#icon-skype"/>
                             </svg>
@@ -875,7 +876,12 @@
         let scr = document.createElement('script')
         scr.setAttribute('src', 'https://api-maps.yandex.ru/2.1/?lang=ru_RU')
         document.getElementById('yandexMap').appendChild(scr)
-    }, 5000)
+
+        /*let styleFile = document.createElement('link')
+        styleFile.setAttribute('href', 'css/async.css')
+        styleFile.setAttribute('rel', 'stylesheet')
+        document.body.appendChild(styleFile)*/
+    }, 4000)
 
 setTimeout(() => {
 
@@ -927,9 +933,9 @@ setTimeout(() => {
         map.geoObjects.add(clusterer)
         clusterer.add(geoObjects)
     }
-    }, 6000)
+    }, 5000)
 </script>
-<!--<link rel="stylesheet" href="css/async.css?ver=0.0.17">-->
+<!--<link rel="stylesheet" href="css/async.css">-->
 <script src="js/app.min.js?ver=0.0.18"></script>
 </body>
 </html>
