--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,6 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/app.min.css">
-    <!--<style>.header{position:relative;overflow-x:hidden}.first-line{background:#000000a3;position:fixed;top:0;left:0;right:0;bottom:auto;z-index:5}.logo{margin-top:14px;margin-bottom:14px;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center;text-transform:uppercase;text-decoration:none}.logo .logo__icon{width:30px;height:54px;background:url(img/dest/logo.webp) center center no-repeat;background-size:contain}.logo .logo__bold{font-family:'R Bold',sans-serif;color:#fe0000;text-transform:uppercase;font-size:18px}.logo .logo__thin{font-family:'R Thin',sans-serif;color:#fff;text-transform:uppercase;font-size:18px}.header__content{overflow:hidden;height:100vh;background:url(img/dest/light-bulbs-5488573.webp) center no-repeat;background-size:cover;position:relative;z-index:0}.header__content::after{content:'';background:rgba(0,0,0,.69);position:absolute;top:0;left:0;right:0;bottom:0;z-index:1;display:block;width:100%;height:100%}.header-content{position:relative;z-index:2;-webkit-box-align:center;-ms-flex-align:center;align-items:center}.header-content .header-content__h1{max-width:516px;text-transform:uppercase;line-height:1.4;font-size:19px;color:#fff;font-family:'R Regular',sans-serif;margin-top:6px;padding-bottom:30px;text-shadow:2px 2px rgba(50,50,50,.3)}.header-content .header-content__h1::after{content:'';display:block;width:67px;height:2px;background:#fff;position:relative;z-index:2;margin-top:30px}.header-content__logo{display:inline-block;text-transform:uppercase}.header-content__logo .logo__bold{font-family:'R Bold',sans-serif;color:#fe0000;text-transform:uppercase;font-size:44px}.header-content__logo .logo__thin{font-family:'R Thin',sans-serif;color:#fff;text-transform:uppercase;font-size:44px}.header-content__text{max-width:465px;font-family:'R Light',sans-serif;color:#fff;font-size:1.4rem;line-height:23px;letter-spacing:.3px}.header-content__btn{display:inline-block;margin-top:39px;border:2px solid #fff;color:#fff;text-decoration:none;padding:8px 28px;-webkit-box-shadow:0 0 0 transparent;box-shadow:0 0 0 transparent;-webkit-transform:scale(1);-ms-transform:scale(1);transform:scale(1)}.header-content-df{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;-ms-flex-wrap:wrap;flex-wrap:wrap}.header__social{border-bottom:1px solid #a8a8a8;-webkit-box-shadow:3px 3px 6px rgba(50,50,50,.5);box-shadow:3px 3px 6px rgba(50,50,50,.5);background:#fff;position:absolute;bottom:0;left:0;right:0;top:auto}.icon{display:inline-block;width:40px;height:40px;stroke-width:0;stroke:#000;fill:#000}.social{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;-ms-flex-wrap:wrap;flex-wrap:wrap}.social__block{-webkit-box-flex:1;-ms-flex-positive:1;flex-grow:1;max-width:360px;padding:17px 0;display:-webkit-box;display:-ms-flexbox;display:flex;-ms-flex-wrap:wrap;flex-wrap:wrap;-webkit-box-align:center;-ms-flex-align:center;align-items:center}.social__block .social__header{font-family:'OS Bold',sans-serif;font-size:20px;color:#000000a3}.social__block .social__text{font-family:'OS Regular',sans-serif;font-size:14px;color:#86878b}.social__list{-webkit-box-flex:3;-ms-flex-positive:3;flex-grow:3;max-width:500px;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;margin-top:30px;margin-bottom:30px;-webkit-box-align:center;-ms-flex-align:center;align-items:center;min-width:250px}.social__list .social__item{display:inline-block;padding:12px}.social__list .social__link{display:inline-block}.form{position:relative;z-index:2;-webkit-box-align:center;-ms-flex-align:center;align-items:center}form.form{max-width:360px;background:#fff;border-radius:3px;position:relative;overflow:hidden;min-height:360px;-webkit-box-shadow:2px 2px 5px rgba(50,50,50,.2);box-shadow:2px 2px 5px rgba(50,50,50,.2)}form.form .form__header{font-size:20px;padding:12px 18px;font-family:'OS Bold',sans-serif;background:#f5f5f5;margin-bottom:58px;text-align:center}form.form .form__header .orange-color{color:#fe0000;text-transform:uppercase}form.form .form__label{display:block;margin:35px auto 0;position:relative;z-index:3;padding:0 35px}form.form .form__input{outline:0;border-top:none;border-left:1px solid rgba(245,245,245,.56);border-right:1px solid rgba(245,245,245,.56);border-bottom:1px solid #e2e2e2;width:286px;text-indent:7px;font-family:'OS Light',sans-serif}form.form .form__input::-webkit-input-placeholder{color:#bdbdbd}form.form .form__input::-moz-placeholder{color:#bdbdbd}form.form .form__input:-ms-input-placeholder{color:#bdbdbd}form.form .form__input::-ms-input-placeholder{color:#bdbdbd}form.form .form__btn{text-align:center;position:absolute;bottom:0;left:0;right:0;width:100%;color:#fff;border:none;outline:0;background:#fe0000;height:55px;display:block;font-size:15px;font-family:'OS SemiBold',sans-serif}.form__errors{display:block;min-width:100%;position:absolute;bottom:-15px;left:0;padding:0 35px}.menu{margin-top:21px;margin-bottom:21px;min-width:40px;min-height:40px;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center}.menu__container{display:-webkit-box;display:-ms-flexbox;display:flex;-ms-flex-wrap:wrap;flex-wrap:wrap;margin-left:-19px;margin-right:-19px}.menu__container .menu__item{-webkit-box-sizing:border-box;box-sizing:border-box;word-wrap:break-word;margin-left:19px;margin-right:19px}.menu__container .menu__item .menu__link{font-family:'OS SemiBold',sans-serif;color:#fff;font-size:1.4rem;text-decoration:none;width:100%;height:100%;text-align:center}.menu__container .menu__item .menu__link::after{display:block;content:'';height:2px;width:0%;background-color:#fe0000}.menu__container .menu__item .menu__link.menu__link-active{color:#fe0000}.menu__container .menu__item .menu__link.menu__link-active::after{width:100%}.tabs__content-list .tabs__content-item{display:none;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;-ms-flex-wrap:wrap;flex-wrap:wrap;-webkit-box-align:center;-ms-flex-align:center;align-items:center}.tabs__contentText .tabs__contentHeader{font-family:'OS Bold',AdobeInvisFont,MyriadPro-Regular,sans-serif;font-size:20px;margin-bottom:52px;max-width:475px}.tabs__contentText .tabs__contentWrapP{color:#86878b;margin-bottom:52px;max-width:475px}.tabs__contentText .tabs__contentWrapP .tabs__contentP{font-size:14px;font-family:'OS Regular',AdobeInvisFont,MyriadPro-Regular,sans-serif;color:#86878b}.tabs__contentText .tabs__contentBtn{border-radius:3px;background:#fe0000;color:#fff;font-family:'OS SemiBold',AdobeInvisFont,MyriadPro-Regular,sans-serif;text-align:center;padding:16px 25px;text-decoration:none;display:inline-block}.tabs__contentImg{max-width:320px}html{font-size:10px;font-family:'OS Regular',sans-serif;overflow-x:hidden;-webkit-box-sizing:border-box;box-sizing:border-box;scroll-behavior:smooth}html body,html div,html form,html h1,html h2,html input,html li,html p,html ul{margin:0;padding:0}html img{border:0}html ul li{list-style:none}html h1,html h2{font-size:100%;font-weight:400}html input{font-family:inherit;font-size:inherit;font-weight:inherit}html header,html nav{display:block}html img{max-width:100%;height:auto}body{font-size:16px;background:#424242;margin:0;scroll-behavior:smooth}.container{display:block;max-width:1100px;margin:0 auto;padding-left:30px;padding-right:30px}.flex-block{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;-ms-flex-wrap:wrap;flex-wrap:wrap}.h100{height:100%}.aic{-webkit-box-align:center;-ms-flex-align:center;align-items:center}button[disabled=disabled],button[disabled]{background:#fe0000!important}@media screen and (max-width:1100px){.container{padding-left:30px;padding-right:30px}}@media screen and (max-width:960px){.header__content{background:url(img/dest/lighting-3489394_1280.webp) center no-repeat;height:auto}.header__content::after{background:rgba(117,117,117,.8)}.header-content{margin-top:90px;text-align:center}.header-content .header-content__h1{font-size:28px;margin:28px auto 0}.header-content .header-content__h1::after{display:block;margin:30px auto 0}.header-content__logo .logo__bold{font-size:32px}.header-content__logo .logo__thin{font-size:32px}.header-content__text{font-size:1.2rem;margin:0 auto}.header-content__btn{margin-top:20px}.header-content-df{-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-webkit-box-align:center;-ms-flex-align:center;align-items:center}.header__social{position:relative;bottom:auto;left:auto;right:auto;top:auto}.icon{width:28px;height:28px;opacity:1;fill:#000}.social{text-align:center;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center}.social__block{display:block;margin:0 auto}.social__list{margin-top:15px;margin-bottom:15px}form.form{display:block;margin:30px auto;min-height:350px;min-width:300px}.tabs__contentImg{padding-left:52px}.container{padding-left:15px;padding-right:15px}.h100{height:auto}.aic{-webkit-box-align:normal;-ms-flex-align:normal;align-items:normal}}@media screen and (max-width:895px){.social__list{margin-top:0}form.form{min-width:300px}.tabs__content-list .tabs__content-item{-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center}.tabs__contentText{padding-left:0;display:block;margin:0 auto 30px;text-align:center;-webkit-box-ordinal-group:3;-ms-flex-order:2;order:2}.tabs__contentText .tabs__contentHeader{text-align:center;margin-bottom:30px}.tabs__contentText .tabs__contentWrapP{margin-bottom:30px}.tabs__contentImg{display:block;margin:0 auto 30px;min-width:100%;text-align:center;-webkit-box-ordinal-group:2;-ms-flex-order:1;order:1;padding-left:0}.tabs__contentImg img{max-width:435px}.container{padding-left:15px;padding-right:15px}}@media screen and (max-width:720px){.logo{margin-top:10px;margin-bottom:10px}.logo .logo__icon{height:35px}.logo .logo__bold{font-size:16px}.logo .logo__thin{font-size:16px}.header-content .header-content__h1{font-size:20px;margin:28px auto 0}form.form{min-height:280px}form.form .form__header{font-size:17px;padding:8px 0;margin-bottom:30px}form.form .form__label{text-align:center;margin:30px auto 0;padding:0}form.form .form__input{width:230px;text-indent:5px;font-size:14px}.form__errors{padding:0 9px;text-align:center}.menu{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;position:fixed;top:0;left:auto;right:0;bottom:auto;z-index:5;margin-top:0;margin-bottom:0}.menu::after,.menu::before{content:'';width:30px;height:2px;position:absolute;top:22px;right:8px;background:#fff;-webkit-transform:rotate(0);-ms-transform:rotate(0);transform:rotate(0)}.menu::before{top:29px}.menu__container{display:none;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;margin-top:70px}.menu__container .menu__item{margin-bottom:30px;padding-right:14px;text-align:right}.container{padding-left:10px;padding-right:10px}}@media screen and (max-width:500px){.tabs__contentImg img{max-width:380px}.container{padding-left:10px;padding-right:10px}}@media screen and (max-width:380px){form.form{min-height:280px;min-width:calc(100% - 10px)}.tabs__contentImg img{max-width:100%}.container{padding-left:10px;padding-right:10px}}@media screen and (max-width:321px){.container{padding-left:5px;padding-right:5px}}</style>-->
 </head>
 <body>
 <header class="header" id="header">
@@ -65,6 +64,21 @@
                         <span class="form__errors"></span>
                     </label>
                     <button class="form__btn" type="submit" disabled="disabled">Отправить сообщение</button>
+                    <div class="messageSuccess">
+                        <div class="messageSuccess__closeBTN" title="Закрыть">
+                            <span class="messageSuccess__cross">&#10006;</span>
+                        </div>
+                        <div class="messageSuccess__header">Сообщение отправлено!</div>
+                        <p class="messageSuccess__p">Мы свяжемся с Вами в ближайшее время.</p>
+                    </div>
+                    <div class="messageNotSuccess">
+                        <div class="messageNotSuccess__closeBTN" title="Закрыть">
+                            <span class="messageNotSuccess__cross">&#10006;</span>
+                        </div>
+                        <div class="messageNotSuccess__header">Сообщение НЕ отправлено!</div>
+                        <p class="messageNotSuccess__p">Попробуйте через некоторое время,
+                            либо воспользуйтесь другим способом связи.</p>
+                    </div>
                 </form>
             </div>
         </div>
@@ -668,34 +682,56 @@
                     <h2 class="contact__headerH2">Написать нам</h2>
                     <h3 class="contact__headerH3">Lorem ipsum dolor sit amet, consecrated advising elite.</h3>
                 </div>
+
                 <form action="#" class="contact__form" title="Мы рады с Вами пообщаться!)">
                     <div class="contact__form1Block">
                         <label for="contact__inp-name" class="contact__label">
-                            <input type="text" id="contact__inp-name" class="contact__inp form__input" placeholder="Имя"
+                            <input type="text" id="contact__inp-name" class="contact__inp form__input"
+                                   name="form__name"
+                                   placeholder="Имя"
                                    required>
                             <span class="form__errors"></span>
                         </label>
                         <label for="contact__inp-mail" class="contact__label">
-                            <input type="email" id="contact__inp-mail" class="contact__inp form__input"
+                            <input type="email" id="contact__inp-mail"
+                                   name="form__email"
+                                   class="contact__inp form__input"
                                    placeholder="Email" required>
                             <span class="form__errors"></span>
                         </label>
                         <label for="contact__inp-phone" class="contact__label">
                             <input type="tel" id="contact__inp-phone" class="contact__inp form__input"
-                                   placeholder="Телефон" required>
+                                   placeholder="Телефон" name="form__phone" required>
                             <span class="form__errors"></span>
                         </label>
                     </div>
                     <div class="contact__form2Block">
                         <label for="contact__textarea" class="contact__label">
-                            <textarea name="form__msg-footer" id="contact__textarea" cols="30" rows="10"
+                            <textarea name="form__textarea" id="contact__textarea" cols="30" rows="10"
+                                      class="form__input"
                                       placeholder="Сообщение"></textarea>
                         </label>
                     </div>
                     <div class="wrap-form-btn">
-                        <button class="contact__btn" type="submit" disabled="disabled">Жду звонка</button>
+                        <button class="contact__btn" type="submit" disabled="disabled" id="contact__formBTN">Жду звонка</button>
+                    </div>
+                    <div class="messageSuccess" id="messageSuccess">
+                        <div class="messageSuccess__closeBTN" title="Закрыть">
+                            <span class="messageSuccess__cross">&#10006;</span>
+                        </div>
+                        <div class="messageSuccess__header">Сообщение отправлено!</div>
+                        <p class="messageSuccess__p">Мы свяжемся с Вами в ближайшее время.</p>
+                    </div>
+                    <div class="messageNotSuccess">
+                        <div class="messageNotSuccess__closeBTN" title="Закрыть">
+                            <span class="messageNotSuccess__cross">&#10006;</span>
+                        </div>
+                        <div class="messageNotSuccess__header">Сообщение НЕ отправлено!</div>
+                        <p class="messageNotSuccess__p">Попробуйте через некоторое время,
+                            либо воспользуйтесь другим способом связи.</p>
                     </div>
                 </form>
+
             </div>
         </div>
 
