--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
                         <li class="menu__item"><a href="#price" class="menu__link">Цены</a></li>
                         <li class="menu__item"><a href="#say" class="menu__link">Отзывы</a></li>
                         <li class="menu__item"><a href="#contact" class="menu__link">Контакты</a></li>
+                        <li class="menu__item"><a href="http://stas/blog/" class="menu__link">Блог</a></li>
                     </ul>
                 </nav>
             </div>
@@ -66,14 +67,14 @@
                     <button class="form__btn" type="submit" disabled="disabled">Отправить сообщение</button>
                     <div class="messageSuccess">
                         <div class="messageSuccess__closeBTN" title="Закрыть">
-                            <span class="messageSuccess__cross">&#10006;</span>
+                            <span class="messageSuccess__cross">&times;</span>
                         </div>
                         <div class="messageSuccess__header">Сообщение отправлено!</div>
                         <p class="messageSuccess__p">Мы свяжемся с Вами в ближайшее время.</p>
                     </div>
                     <div class="messageNotSuccess">
                         <div class="messageNotSuccess__closeBTN" title="Закрыть">
-                            <span class="messageNotSuccess__cross">&#10006;</span>
+                            <span class="messageNotSuccess__cross">&times;</span>
                         </div>
                         <div class="messageNotSuccess__header">Сообщение НЕ отправлено!</div>
                         <p class="messageNotSuccess__p">Попробуйте через некоторое время,
@@ -717,14 +718,14 @@
                     </div>
                     <div class="messageSuccess" id="messageSuccess">
                         <div class="messageSuccess__closeBTN" title="Закрыть">
-                            <span class="messageSuccess__cross">&#10006;</span>
+                            <span class="messageSuccess__cross">&times;</span>
                         </div>
                         <div class="messageSuccess__header">Сообщение отправлено!</div>
                         <p class="messageSuccess__p">Мы свяжемся с Вами в ближайшее время.</p>
                     </div>
                     <div class="messageNotSuccess">
                         <div class="messageNotSuccess__closeBTN" title="Закрыть">
-                            <span class="messageNotSuccess__cross">&#10006;</span>
+                            <span class="messageNotSuccess__cross">&times;</span>
                         </div>
                         <div class="messageNotSuccess__header">Сообщение НЕ отправлено!</div>
                         <p class="messageNotSuccess__p">Попробуйте через некоторое время,
